Fixing spacing

--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ h2{
 }
 .temp{
     background-color: var(--bg-hover);
-    padding: 20px 10px;
+    padding: 15px 10px 25px 10px;
     box-shadow:
     0 4px 6px rgba(0, 0, 0, 0.1),
     0 10px 20px rgba(0, 0, 0, 0.15);
